Listo pero falta algo

--- a/src/1_explorer_data.ipynb
+++ b/src/1_explorer_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -180,19 +180,20 @@
        "4      Abnormal  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "raw_data = pd.read_csv(\"../../raw/mrssd/healthcare_dataset.csv\")\n",
+    "#Muestra los primeros datos del dataset\n",
+    "raw_data = pd.read_csv(\"../raw/healthcare_dataset.csv\")\n",
     "raw_data.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -201,18 +202,19 @@
        "(55500, 15)"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Se obtienen las dimensiones del dataset\n",
     "raw_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -221,18 +223,19 @@
        "(55500, 15)"
       ]
      },
-     "execution_count": 336,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Se obtienen las dimensiones del dataset eliminando los valores nulos\n",
     "raw_data.dropna().shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -245,18 +248,19 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Se obtienen las columnas del dataset\n",
     "raw_data.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -280,34 +284,29 @@
        "dtype: object"
       ]
      },
-     "execution_count": 338,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Tipos de datos\n",
     "raw_data.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Se filtran las columnas que se van a utilizar, en este caso se utilizan las columnas que puedan tener un impacto en el resultado\n",
     "filter_data_values = raw_data[['Age', 'Gender', 'Blood Type', 'Medical Condition', 'Admission Type', 'Medication', 'Test Results']]"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Convertir los datos tipo objeto a tipo numerico (ordinal (no usar), presonal, one hot encoder, frequency)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -320,152 +319,19 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Se filtran los datos que se desean utilizar como respuesta\n",
     "filter_data_values[\"Test Results\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(55500, 7)"
-      ]
-     },
-     "execution_count": 341,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "filter_data_values.dropna().shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 342,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Age</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>55500.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>51.539459</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>19.602454</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>13.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>35.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>52.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>68.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>89.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                Age\n",
-       "count  55500.000000\n",
-       "mean      51.539459\n",
-       "std       19.602454\n",
-       "min       13.000000\n",
-       "25%       35.000000\n",
-       "50%       52.000000\n",
-       "75%       68.000000\n",
-       "max       89.000000"
-      ]
-     },
-     "execution_count": 342,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "filter_data_values.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 343,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Age                   int64\n",
-       "Gender               object\n",
-       "Blood Type           object\n",
-       "Medical Condition    object\n",
-       "Admission Type       object\n",
-       "Medication           object\n",
-       "Test Results         object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 343,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "filter_data_values.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -478,244 +344,49 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Se cuentan los valores que puede tomar la columna Test Results\n",
     "filter_data_values['Test Results'].value_counts()"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "filter_data_values['Gender']= filter_data_values['Gender'].replace({\"Female\": 0, \"Male\": 1})\n",
-    "filter_data_values['Blood Type']= filter_data_values['Blood Type'].replace({\"A+\": 0, \"A-\": 1, \"AB+\": 2, \"AB-\": 3, \"B+\": 4, \"B-\": 5, \"O+\": 6, \"O-\": 7})\n",
-    "filter_data_values['Medical Condition']= filter_data_values['Medical Condition'].replace({\"Diabetes\": 0, \"Cancer\": 1, \"Arthritis\": 2, \"Hypertension\": 3, \"Asthma\": 4, \"Obesity\": 5})\n",
-    "filter_data_values['Admission Type']= filter_data_values['Admission Type'].replace({\"Urgent\": 0, \"Elective\": 1, \"Emergency\": 2})\n",
-    "filter_data_values['Medication']= filter_data_values['Medication'].replace({\"Ibuprofen\": 0, \"Aspirin\": 1, \"Lipitor\": 2, \"Penicillin\": 3, \"Paracetamol\": 4})\n",
-    "filter_data_values['Test Results']= filter_data_values['Test Results'].replace({\"Abnormal\": 0, \"Normal\": 1, \"Inconclusive\": 2})"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 345,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Test Results\n",
-       "Abnormal        18627\n",
-       "Normal          18517\n",
-       "Inconclusive    18356\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 345,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "filter_data_values[\"Test Results\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Se divide el set de datos entre los datos a usar y la respuesta\n",
     "response = filter_data_values[\"Test Results\"]\n",
     "data = filter_data_values.drop(columns=[\"Test Results\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Blood Type</th>\n",
-       "      <th>Medical Condition</th>\n",
-       "      <th>Admission Type</th>\n",
-       "      <th>Medication</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>30</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>B-</td>\n",
-       "      <td>Cancer</td>\n",
-       "      <td>Urgent</td>\n",
-       "      <td>Paracetamol</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>62</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>A+</td>\n",
-       "      <td>Obesity</td>\n",
-       "      <td>Emergency</td>\n",
-       "      <td>Ibuprofen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>76</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>A-</td>\n",
-       "      <td>Obesity</td>\n",
-       "      <td>Emergency</td>\n",
-       "      <td>Aspirin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>28</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>O+</td>\n",
-       "      <td>Diabetes</td>\n",
-       "      <td>Elective</td>\n",
-       "      <td>Ibuprofen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>43</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>AB+</td>\n",
-       "      <td>Cancer</td>\n",
-       "      <td>Urgent</td>\n",
-       "      <td>Penicillin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55495</th>\n",
-       "      <td>42</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>O+</td>\n",
-       "      <td>Asthma</td>\n",
-       "      <td>Elective</td>\n",
-       "      <td>Penicillin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55496</th>\n",
-       "      <td>61</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>AB-</td>\n",
-       "      <td>Obesity</td>\n",
-       "      <td>Elective</td>\n",
-       "      <td>Aspirin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55497</th>\n",
-       "      <td>38</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>B+</td>\n",
-       "      <td>Hypertension</td>\n",
-       "      <td>Urgent</td>\n",
-       "      <td>Ibuprofen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55498</th>\n",
-       "      <td>43</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>O-</td>\n",
-       "      <td>Arthritis</td>\n",
-       "      <td>Elective</td>\n",
-       "      <td>Ibuprofen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55499</th>\n",
-       "      <td>53</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>O+</td>\n",
-       "      <td>Arthritis</td>\n",
-       "      <td>Urgent</td>\n",
-       "      <td>Ibuprofen</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>55500 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Age  Gender Blood Type Medical Condition Admission Type   Medication\n",
-       "0       30    Male         B-            Cancer         Urgent  Paracetamol\n",
-       "1       62    Male         A+           Obesity      Emergency    Ibuprofen\n",
-       "2       76  Female         A-           Obesity      Emergency      Aspirin\n",
-       "3       28  Female         O+          Diabetes       Elective    Ibuprofen\n",
-       "4       43  Female        AB+            Cancer         Urgent   Penicillin\n",
-       "...    ...     ...        ...               ...            ...          ...\n",
-       "55495   42  Female         O+            Asthma       Elective   Penicillin\n",
-       "55496   61  Female        AB-           Obesity       Elective      Aspirin\n",
-       "55497   38  Female         B+      Hypertension         Urgent    Ibuprofen\n",
-       "55498   43    Male         O-         Arthritis       Elective    Ibuprofen\n",
-       "55499   53  Female         O+         Arthritis         Urgent    Ibuprofen\n",
-       "\n",
-       "[55500 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 347,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Se separan los datos en datos numericos y datos categoricos\n",
     "data_num = data.select_dtypes(exclude='object')\n",
     "data_object = data.select_dtypes(include='object')\n",
     "\n",
-    "encoder = OneHotEncoder(sparse_output= False).set_output(transform=\"pandas\")"
+    "#Se instancia el objeto a utilizar para la codificacion de los datos categoricos y este se transforma a un dataframe\n",
+    "#Pandas no soporta los datos sparse, por lo que se utiliza la opcion de sparse_output=False\n",
+    "encoder = OneHotEncoder(sparse_output=False).set_output(transform=\"pandas\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Se codifican los datos categoricos por cada columna\n",
     "for col_name in data_object.columns:\n",
     "    encoded_array = encoder.fit_transform(data_object[[col_name]])\n",
     "    data_object = pd.concat([data_object, encoded_array], axis=1).drop(col_name, axis=1)"
@@ -723,85 +394,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Se unen los datos numericos y categoricos\n",
     "data= pd.concat([data_num, data_object], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Se dividen los datos en datos de entrenamiento y test 90% y 10% respectivamente\n",
     "X_train, X_test, y_train, y_test = train_test_split(data, response, test_size=0.1, random_state=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Se dividen los datos de entrenamiento en datos de entrenamiento y validacion 80% y 20% respectivamente\n",
     "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.2, random_state=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train.to_csv(\"../../process_dataset/rmssd/train_data.csv\", index=False)\n",
-    "X_val.to_csv(\"../../process_dataset/rmssd/val_data.csv\", index=False)\n",
-    "X_test.to_csv(\"../../process_dataset/rmssd/test_data.csv\", index=False)"
+    "#Se guardan los datos en archivos csv\n",
+    "X_train.to_csv(\"../process_dataset/train_data.csv\", index=False)\n",
+    "X_val.to_csv(\"../process_dataset/val_data.csv\", index=False)\n",
+    "X_test.to_csv(\"../process_dataset/test_data.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../../process_dataset/rmssd/y_train.npy\", 'wb') as doc_export:\n",
-    "    np.save(doc_export, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 355,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"../../process_dataset/rmssd/y_val.npy\", 'wb') as doc_export:\n",
-    "    np.save(doc_export, y_val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 356,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"../../process_dataset/rmssd/y_test.npy\", 'wb') as doc_export:\n",
+    "#Se guardan los datos de respuesta en archivos csv\n",
+    "with open(\"../process_dataset/y_train.npy\", 'wb') as doc_export:\n",
+    "    np.save(doc_export, y_train)\n",
+    "with open(\"../process_dataset/y_val.npy\", 'wb') as doc_export:\n",
+    "    np.save(doc_export, y_val)\n",
+    "with open(\"../process_dataset/y_test.npy\", 'wb') as doc_export:\n",
     "    np.save(doc_export, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_counts = pd.DataFrame()\n",
-    "df_counts[\"y_values\"] = y_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -814,12 +464,15 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 358,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df_counts = pd.DataFrame()\n",
+    "df_counts[\"y_values\"] = y_train\n",
+    "#Se verifican los datos de respuesta\n",
     "df_counts[\"y_values\"].value_counts()"
    ]
   }
