--- a/src/2_scaler_data.ipynb
+++ b/src/2_scaler_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -425,30 +425,24 @@
        "[39960 rows x 25 columns]"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_data = pd.read_csv(\"../../process_dataset/rmssd/train_data.csv\")\n",
+    "#Se carga el dataset y se muestra\n",
+    "df_data = pd.read_csv(\"../process_dataset/train_data.csv\")\n",
     "df_data"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "todos los metodos basados en distribucion trabajaran bien con svm y rf\n",
-    "todo metodo sin distribucion como robust o minmax scaler beneficia a adabost"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Se crea una instancia de StandardScaler y se ajusta a los datos\n",
     "sta_scaler_instance = StandardScaler()\n",
     "sta_scaler_instance.fit(X=df_data.values)\n",
     "data_sta_scaled = sta_scaler_instance.transform(X=df_data.values)"
@@ -456,10 +450,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Se crea una instancia de RobustScaler y se ajusta a los datos\n",
     "rob_scaler_instance = RobustScaler()\n",
     "rob_scaler_instance.fit(X=df_data.values)\n",
     "data_rob_scaled = rob_scaler_instance.transform(X=df_data.values)"
@@ -467,10 +462,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Se crea una instancia de MinMaxScaler y se ajusta a los datos\n",
     "mm_scaler_instance = MinMaxScaler()\n",
     "mm_scaler_instance.fit(X=df_data.values)\n",
     "data_mm_scaled = mm_scaler_instance.transform(X=df_data.values)"
@@ -478,10 +474,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Se guardan los datos escalados en un dataframe\n",
     "df_sta_scaler = pd.DataFrame(data=data_sta_scaled, columns=df_data.columns)\n",
     "df_rob_scaled = pd.DataFrame(data=data_rob_scaled, columns=df_data.columns)\n",
     "df_mm_scaled = pd.DataFrame(data=data_mm_scaled, columns=df_data.columns)"
@@ -489,35 +486,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sta_scaler.to_csv(\"../../process_dataset/rmssd/train_data_sta_scaled.csv\", index=False)\n",
-    "df_rob_scaled.to_csv(\"../../process_dataset/rmssd/train_data_rob_scaled.csv\", index=False)\n",
-    "df_mm_scaled.to_csv(\"../../process_dataset/rmssd/train_data_mm_scaled.csv\", index=False)"
+    "#Se guardan los dataframe en un archivo csv\n",
+    "df_sta_scaler.to_csv(\"../process_dataset/train_data_sta_scaled.csv\", index=False)\n",
+    "df_rob_scaled.to_csv(\"../process_dataset/train_data_rob_scaled.csv\", index=False)\n",
+    "df_mm_scaled.to_csv(\"../process_dataset/train_data_mm_scaled.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['../../results/rmssd/mm_scaler.joblib']"
+       "['../results/mm_scaler.joblib']"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dump(sta_scaler_instance, \"../../results/rmssd/sta_scaler.joblib\")\n",
-    "dump(rob_scaler_instance, \"../../results/rmssd/rob_scaler.joblib\")\n",
-    "dump(mm_scaler_instance, \"../../results/rmssd/mm_scaler.joblib\")"
+    "#Se guardan los objetos scaler en un archivo joblib\n",
+    "dump(sta_scaler_instance, \"../results/sta_scaler.joblib\")\n",
+    "dump(rob_scaler_instance, \"../results/rob_scaler.joblib\")\n",
+    "dump(mm_scaler_instance, \"../results/mm_scaler.joblib\")"
    ]
   }
  ],
