--- a/src/1_explorer_data.ipynb
+++ b/src/1_explorer_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "4      Abnormal  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Sirve para ver los posible valores de una columna\n",
+    "#print(raw_data['Test Results'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +212,7 @@
        "(55500, 15)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +233,7 @@
        "(55500, 15)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +258,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +294,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -319,32 +329,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Se filtran los datos que se desean utilizar como respuesta\n",
-    "filter_data_values[\"Test Results\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Test Results\n",
-       "Abnormal        18627\n",
-       "Normal          18517\n",
-       "Inconclusive    18356\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 9,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,27 +389,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Se dividen los datos en datos de entrenamiento y test 90% y 10% respectivamente\n",
-    "X_train, X_test, y_train, y_test = train_test_split(data, response, test_size=0.1, random_state=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(data, response, test_size=0.1, random_state=10)\n",
     "#Se dividen los datos de entrenamiento en datos de entrenamiento y validacion 80% y 20% respectivamente\n",
     "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.2, random_state=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +441,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
